service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-go
spec:
  selector:
    app: rest-go
  ports:
  - port: 8080
    targetPort: 80
