ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-backend-api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-backend-api
            port: 
              number: 8080
